Re-factor element creation

--- a/skeleton/index.html
+++ b/skeleton/index.html
@@ -23,12 +23,16 @@
 				transform : scaleX(-1);
 				-ms-filter : fliph; /*IE*/
 				filter : fliph; /*IE*/
+				z-index: 10;
 
 				width : 600px;
 				height : 450px;
 			}
 
 			#videoel {
+				position: absolute;
+				top: 0px;
+				left: 0px;
 				-o-transform : scaleX(-1);
 				-webkit-transform : scaleX(-1);
 				transform : scaleX(-1);
@@ -37,6 +41,7 @@
 
 				width : 600px;
 				height : 450px;
+				z-index: 9;
 			}
 
 			#container {
@@ -130,12 +135,7 @@
 		<script src="../js/3rdparty/clmtrackr/examples/js/emotionmodel.js"></script>
 
 		<div id="content">
-			<div id="container">
-				<video id="videoel" width="400" height="300" preload="auto" loop></video>
-				<canvas id="overlay" width="400" height="300"></canvas>
-			</div>
-
-			<canvas id="sketch" width="400" height="300"></canvas>
+			<div id="container"></div>
 
 			<div id="emotion_container">
 				<div id="emotion_icons">
@@ -151,17 +151,12 @@
 			</div>
 			<a href="https://github.com/auduno/clmtrackr"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_green_007200.png" alt="Fork me on GitHub"></a>
 			<script>
-				var aCamera = new FTG.Camera();
 				var aExpression = new FTG.ExpressionDetector();
 
 				// TODO: replace onload with something more reliable (jQuery or http://stackoverflow.com/questions/9274374/best-way-of-unobtrusive-onload-in-plain-javascript)
 				window.onload = function(e) {
-					aCamera.init('videoel', function() {
-						console.debug('Video is ready!');
-						aExpression.init('overlay', aCamera);
+					aExpression.init(function() {
 						aExpression.start();
-
-						aExpression.debug(true);
 					});
 				};
 
