--- a/card-flipper/index.html
+++ b/card-flipper/index.html
@@ -4,9 +4,10 @@
 	<meta charset="UTF-8" />
 	<title>Phaser - Making your first game, part 1</title>
 	<script type="text/javascript" src="../js/3rdparty/phaser.min.js"></script>
-	<script type="text/javascript" src="./constants.js"></script>
+
+	<script type="text/javascript" src="./Constants.js"></script>
 	<script type="text/javascript" src="./PlayState.js"></script>
-	<script type="text/javascript" src="./card.js"></script>
+	<script type="text/javascript" src="./Card.js"></script>
 	<script type="text/javascript" src="./card-flipper.js"></script>
     <style type="text/css">
         body {
