Organize UI stuff in the hud.

--- a/card-flipper/index.html
+++ b/card-flipper/index.html
@@ -7,6 +7,7 @@
 
 	<script type="text/javascript" src="./Constants.js"></script>
 	<script type="text/javascript" src="./PlayState.js"></script>
+	<script type="text/javascript" src="./Hud.js"></script>
 	<script type="text/javascript" src="./Card.js"></script>
 	<script type="text/javascript" src="./card-flipper.js"></script>
     <style type="text/css">
