--- a/card-flipper/index.html
+++ b/card-flipper/index.html
@@ -6,6 +6,8 @@
 	<script type="text/javascript" src="../js/3rdparty/phaser.min.js"></script>
 
 	<script type="text/javascript" src="./Constants.js"></script>
+	<script type="text/javascript" src="./LoadState.js"></script>
+	<script type="text/javascript" src="./SetupState.js"></script>
 	<script type="text/javascript" src="./PlayState.js"></script>
 	<script type="text/javascript" src="./Hud.js"></script>
 	<script type="text/javascript" src="./Card.js"></script>
