--- a/card-flipper/index.html
+++ b/card-flipper/index.html
@@ -16,8 +16,37 @@
         body {
             margin: 0;
         }
+
+		#videoel,
+		#overlay {
+			position: absolute;
+			top: 0px;
+			left: 0px;
+			-o-transform : scaleX(-1);
+			-webkit-transform : scaleX(-1);
+			transform : scaleX(-1);
+			-ms-filter : fliph; /*IE*/
+			filter : fliph; /*IE*/
+			z-index: 10;
+
+			width : 300px;
+			height : 230px;
+		}
+
+		#videoel {
+			z-index: 9;
+		}
+
+		#container {
+			position: absolute;
+			top: 0;
+			right: 0;
+			width: 300px;
+			height : 230px;
+		}
     </style>
 </head>
 <body>
+	<div id="container"></div>
 </body>
 </html>
