--- a/card-flipper/index.html
+++ b/card-flipper/index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="./LoadState.js"></script>
 	<script type="text/javascript" src="./SetupState.js"></script>
 	<script type="text/javascript" src="./PlayState.js"></script>
+	<script type="text/javascript" src="./GameOverState.js"></script>
 	<script type="text/javascript" src="./Hud.js"></script>
 	<script type="text/javascript" src="./Card.js"></script>
 	<script type="text/javascript" src="./card-flipper.js"></script>
