--- a/card-flipper/index.html
+++ b/card-flipper/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<title>Phaser - Making your first game, part 1</title>
+	<title>NumberFlip</title>
 	<script type="text/javascript" src="../js/3rdparty/phaser.min.js"></script>
 
 	<script type="text/javascript" src="./Constants.js"></script>
