Dynamic data loading.

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -57,14 +57,7 @@
 
                         <div class="menu_section">
                             <h3>Games</h3>
-                            <ul class="nav side-menu">
-                                <li><a><i class="fa fa-bar-chart-o"></i> Card Flipper <span class="fa fa-chevron-down"></span></a>
-                                    <ul class="nav child_menu" style="display: none">
-                                        <li><a href="chartjs.html">Subject 1</a></li>
-                                        <li><a href="other_charts.html">Subject 5</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
+                            <ul id="side-menu" class="nav side-menu"></ul>
                         </div>
                     </div>
                     <!-- /sidebar menu -->
