Custom line chart to display better X-axis labels.

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -162,6 +162,7 @@
     <script src="js/nicescroll/jquery.nicescroll.min.js"></script>
 
     <script src="js/custom.js"></script>
+    <script src="js/custom.chart.js"></script>
     <script src="js/app.js"></script>
 </body>
 
