--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -109,9 +109,7 @@
                                 </div>
                                 <div class="x_content">
                                     <div class="row">
-                                        <div class="col-md-12" style="padding: 10px;">
-                                            <canvas id="facial-tracking" width="1500" height="768"></canvas>
-                                        </div>
+                                        <div class="col-md-12" style="padding: 10px;" id="facial-tracking"></div>
                                     </div>
                                     <div class="row">
                                         <div id="facial-tracking-legend" class="col-md-12"></div>
@@ -127,9 +125,7 @@
                                 </div>
                                 <div class="x_content">
                                     <div class="row">
-                                        <div class="col-md-12" style="padding: 10px;">
-                                            <canvas id="score-tracking" width="1500" height="768"></canvas>
-                                        </div>
+                                        <div class="col-md-12" style="padding: 10px;" id="score-tracking"></div>
                                     </div>
                                     <div class="row">
                                         <div id="score-tracking-legend" class="col-md-12"></div>
