Small hack to make it work.

--- a/tetris/index.html
+++ b/tetris/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Masonry - Game Dolphin</title>
-	<script src="phaser.min.js"></script>
+	<script src="../js/3rdparty/phaser.min.js"></script>
 	<script src="load.js"></script>
 	<script src="mainmenu.js"></script>
 	<script src="block.js"></script>
