--- a/tetris/index.html
+++ b/tetris/index.html
@@ -4,14 +4,50 @@
 	<meta charset="UTF-8" />
 	<title>Masonry - Game Dolphin</title>
 	<script src="../js/3rdparty/phaser.min.js"></script>
+	<script src="../card-flipper/SetupState.js"></script>
 	<script src="load.js"></script>
 	<script src="mainmenu.js"></script>
 	<script src="block.js"></script>
 	<script src="game.js"></script>
+	<style type="text/css">
+		body {
+			margin: 0;
+		}
+
+		#videoel,
+		#overlay {
+			position: absolute;
+			top: 0px;
+			left: 0px;
+			-o-transform : scaleX(-1);
+			-webkit-transform : scaleX(-1);
+			transform : scaleX(-1);
+			-ms-filter : fliph; /*IE*/
+			filter : fliph; /*IE*/
+			z-index: 10;
+
+			width : 300px;
+			height : 230px;
+		}
+
+		#videoel {
+			z-index: 9;
+		}
+
+		#container {
+			position: absolute;
+			top: 0;
+			right: 0;
+			width: 300px;
+			height : 230px;
+		}
+	</style>
 </head>
+
 <body style:"margin:0px auto;">
 
 <div id="gameContainer" style:"margin:0px auto;"></div>
+<div id="container"></div>
 
 <script type="text/javascript">
 
@@ -24,9 +60,11 @@ window.onload = function() {
 
 var gamevar = new Phaser.Game(w,h,Phaser.AUTO,'gameContainer');
 
+gamevar.state.add('setup',SetupState);
+
 gamevar.state.add('Load',Game.Load);
 
-gamevar.state.add('MainMenu',Game.MainMenu);
+gamevar.state.add('menu',Game.MainMenu);
 
 gamevar.state.add('Game',Game.PlayGame);
 
