Add health progress bar to hud.

--- a/card-flipper/index.html
+++ b/card-flipper/index.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="./PlayState.js"></script>
 	<script type="text/javascript" src="./GameOverState.js"></script>
 	<script type="text/javascript" src="./MenuState.js"></script>
+	<script type="text/javascript" src="./ProgressBar.js"></script>
 	<script type="text/javascript" src="./Hud.js"></script>
 	<script type="text/javascript" src="./Card.js"></script>
 	<script type="text/javascript" src="./card-flipper.js"></script>
