--- a/card-flipper/index.html
+++ b/card-flipper/index.html
@@ -15,6 +15,7 @@
 	<script type="text/javascript" src="./ProgressBar.js"></script>
 	<script type="text/javascript" src="./Hud.js"></script>
 	<script type="text/javascript" src="./Card.js"></script>
+	<script type="text/javascript" src="./RightWrongIcon.js"></script>
 	<script type="text/javascript" src="./card-flipper.js"></script>
     <style type="text/css">
         body {
