Foundation for in-game tutorial.

--- a/card-flipper/index.html
+++ b/card-flipper/index.html
@@ -16,6 +16,7 @@
 	<script type="text/javascript" src="./Hud.js"></script>
 	<script type="text/javascript" src="./Card.js"></script>
 	<script type="text/javascript" src="./RightWrongIcon.js"></script>
+	<script type="text/javascript" src="./Tutorial.js"></script>
 	<script type="text/javascript" src="./card-flipper.js"></script>
     <style type="text/css">
         body {
