Platforms! (required for a platformer game, no?)

--- a/platformer/index.html
+++ b/platformer/index.html
@@ -15,6 +15,7 @@
 	<script type="text/javascript" src="./ProgressBar.js"></script>
 	<script type="text/javascript" src="./Hud.js"></script>
 	<script type="text/javascript" src="./Player.js"></script>
+	<script type="text/javascript" src="./Level.js"></script>
 	<script type="text/javascript" src="./Tutorial.js"></script>
 	<script type="text/javascript" src="./platformer.js"></script>
     <style type="text/css">
