--- a/platformer/index.html
+++ b/platformer/index.html
@@ -17,6 +17,7 @@
 	<script type="text/javascript" src="./Player.js"></script>
 	<script type="text/javascript" src="./Dust.js"></script>
 	<script type="text/javascript" src="./Level.js"></script>
+	<script type="text/javascript" src="./Landscape.js"></script>
 	<script type="text/javascript" src="./Tutorial.js"></script>
 	<script type="text/javascript" src="./platformer.js"></script>
     <style type="text/css">
