--- a/platformer/index.html
+++ b/platformer/index.html
@@ -12,13 +12,13 @@
 	<script type="text/javascript" src="./PlayState.js"></script>
 	<script type="text/javascript" src="./GameOverState.js"></script>
 	<script type="text/javascript" src="./MenuState.js"></script>
+	<script type="text/javascript" src="./TutorialState.js"></script>	
 	<script type="text/javascript" src="./ProgressBar.js"></script>
 	<script type="text/javascript" src="./Hud.js"></script>
 	<script type="text/javascript" src="./Player.js"></script>
 	<script type="text/javascript" src="./Dust.js"></script>
 	<script type="text/javascript" src="./Level.js"></script>
 	<script type="text/javascript" src="./Landscape.js"></script>
-	<script type="text/javascript" src="./Tutorial.js"></script>
 	<script type="text/javascript" src="./platformer.js"></script>
     <style type="text/css">
         body {
