--- a/experiment/index.html
+++ b/experiment/index.html
@@ -27,6 +27,7 @@
 
 	<script type="text/javascript" src="../js/3rdparty/jquery-2.2.0.min.js"></script>
 	<script type="text/javascript" src="../js/ftg.utils.js"></script>
+	<script type="text/javascript" src="../js/ftg.questionnaire.js"></script>
 	<script type="text/javascript" src="../js/ftg.experiment.js"></script>
 </body>
 </html>
