Adjust tetris game to run in experiment mode

--- a/tetris/index.html
+++ b/tetris/index.html
@@ -6,9 +6,9 @@
 	<script src="../js/3rdparty/phaser.min.js"></script>
 	<script src="../card-flipper/SetupState.js"></script>
 	<script src="load.js"></script>
-	<script src="mainmenu.js"></script>
+	<script src="mainmenu.js?1"></script>
 	<script src="block.js"></script>
-	<script src="game.js"></script>
+	<script src="game.js?1"></script>
 	<style type="text/css">
 		body {
 			margin: 0;
