Adjust platformer game to run in experiment mode.

--- a/platformer/index.html
+++ b/platformer/index.html
@@ -7,12 +7,12 @@
 
 	<script type="text/javascript" src="./Constants.js"></script>
 	<script type="text/javascript" src="./BootState.js"></script>
-	<script type="text/javascript" src="./LoadState.js"></script>
-	<script type="text/javascript" src="./SetupState.js"></script>
-	<script type="text/javascript" src="./PlayState.js"></script>
+	<script type="text/javascript" src="./LoadState.js?1"></script>
+	<script type="text/javascript" src="../card-flipper/SetupState.js"></script>
+	<script type="text/javascript" src="./PlayState.js?1"></script>
 	<script type="text/javascript" src="./GameOverState.js"></script>
 	<script type="text/javascript" src="./MenuState.js"></script>
-	<script type="text/javascript" src="./TutorialState.js"></script>	
+	<script type="text/javascript" src="./TutorialState.js"></script>
 	<script type="text/javascript" src="./ProgressBar.js"></script>
 	<script type="text/javascript" src="./Hud.js"></script>
 	<script type="text/javascript" src="./Player.js"></script>
