Adjust games to interact with experiment manager

--- a/card-flipper/index.html
+++ b/card-flipper/index.html
@@ -5,12 +5,12 @@
 	<title>Card Flipper</title>
 	<script type="text/javascript" src="../js/3rdparty/phaser.min.js"></script>
 
-	<script type="text/javascript" src="./Constants.js"></script>
+	<script type="text/javascript" src="./Constants.js?2"></script>
 	<script type="text/javascript" src="./BootState.js"></script>
 	<script type="text/javascript" src="./LoadState.js"></script>
-	<script type="text/javascript" src="./SetupState.js"></script>
+	<script type="text/javascript" src="./SetupState.js?1"></script>
 	<script type="text/javascript" src="./PlayState.js?1"></script>
-	<script type="text/javascript" src="./GameOverState.js"></script>
+	<script type="text/javascript" src="./GameOverState.js?2"></script>
 	<script type="text/javascript" src="./MenuState.js?1"></script>
 	<script type="text/javascript" src="./ProgressBar.js"></script>
 	<script type="text/javascript" src="./Hud.js"></script>
