--- a/platformer/index.html
+++ b/platformer/index.html
@@ -5,12 +5,12 @@
 	<title>Platformer</title>
 	<script type="text/javascript" src="../js/3rdparty/phaser.min.js"></script>
 
-	<script type="text/javascript" src="./Constants.js"></script>
+	<script type="text/javascript" src="./Constants.js?1"></script>
 	<script type="text/javascript" src="./BootState.js"></script>
 	<script type="text/javascript" src="./LoadState.js?1"></script>
 	<script type="text/javascript" src="../card-flipper/SetupState.js"></script>
 	<script type="text/javascript" src="./PlayState.js?1"></script>
-	<script type="text/javascript" src="./GameOverState.js"></script>
+	<script type="text/javascript" src="./GameOverState.js?1"></script>
 	<script type="text/javascript" src="./MenuState.js"></script>
 	<script type="text/javascript" src="./TutorialState.js"></script>
 	<script type="text/javascript" src="./ProgressBar.js"></script>
