--- a/platformer/index.html
+++ b/platformer/index.html
@@ -8,8 +8,8 @@
 	<script type="text/javascript" src="./Constants.js?1"></script>
 	<script type="text/javascript" src="./BootState.js"></script>
 	<script type="text/javascript" src="./LoadState.js?1"></script>
-	<script type="text/javascript" src="../card-flipper/SetupState.js"></script>
-	<script type="text/javascript" src="./PlayState.js?1"></script>
+	<script type="text/javascript" src="../card-flipper/SetupState.js?5"></script>
+	<script type="text/javascript" src="./PlayState.js?2"></script>
 	<script type="text/javascript" src="./GameOverState.js?1"></script>
 	<script type="text/javascript" src="./MenuState.js"></script>
 	<script type="text/javascript" src="./TutorialState.js"></script>
