Adding a bit of love to the questionnaire

--- a/experiment/index.html
+++ b/experiment/index.html
@@ -3,24 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Experiment</title>
-	<style type="text/css">
-        body {
-            margin: 0;
-        }
-
-		#info {
-			position: absolute;
-			top: 0;
-			left: 0;
-			width : 100%;
-			text-align: left;
-			font-size: 2em;
-		}
-
-		#info iframe {
-			overflow: none;
-		}
-    </style>
+	<link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
 	<div id="info"></div>
