Add sounds to help identify key moments in the experiment

--- a/experiment/index.html
+++ b/experiment/index.html
@@ -14,5 +14,8 @@
 	<script type="text/javascript" src="../js/ftg.questions.game.js"></script>
 	<script type="text/javascript" src="../js/ftg.questions.user.js"></script>
 	<script type="text/javascript" src="../js/ftg.experiment.js"></script>
+
+	<audio id="bip" src="./sfx/bip.mp3" volume="1.0">There is a problem with the bip sound in the experiment.</audio>
+	<audio id="tan" src="./sfx/tan.mp3" volume="1.0">There is a problem with the tan sound in the experiment.</audio>
 </body>
 </html>
