Timestamp all the things! A-L-L of them

--- a/experiment/index.html
+++ b/experiment/index.html
@@ -10,6 +10,7 @@
 
 	<script type="text/javascript" src="../js/3rdparty/jquery-2.2.0.min.js"></script>
 	<script type="text/javascript" src="../js/ftg.utils.js"></script>
+	<script type="text/javascript" src="../js/ftg.collector.js"></script>
 	<script type="text/javascript" src="../js/ftg.questionnaire.js"></script>
 	<script type="text/javascript" src="../js/ftg.questions.game.js"></script>
 	<script type="text/javascript" src="../js/ftg.questions.user.js"></script>
