Starting the experiment data visualization tool

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -95,35 +95,18 @@
                     <div class="clearfix"></div>
 
                     <div class="row">
-
                         <div class="col-md-12">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>Facial tracking of emotions</h2>
+                                    <h2>Experiment game session</h2>
                                     <div class="clearfix"></div>
                                 </div>
                                 <div class="x_content">
                                     <div class="row">
-                                        <div class="col-md-12" style="padding: 10px;" id="facial-tracking"></div>
+                                        <div class="col-md-12" style="padding: 10px;" id="data-area"></div>
                                     </div>
                                     <div class="row">
-                                        <div id="facial-tracking-legend" class="col-md-12"></div>
-                                    </div>
-                                    <div class="clearfix"></div>
-                                </div>
-                            </div>
-
-                            <div class="x_panel">
-                                <div class="x_title">
-                                    <h2>Score tracking</h2>
-                                    <div class="clearfix"></div>
-                                </div>
-                                <div class="x_content">
-                                    <div class="row">
-                                        <div class="col-md-12" style="padding: 10px;" id="score-tracking"></div>
-                                    </div>
-                                    <div class="row">
-                                        <div id="score-tracking-legend" class="col-md-12"></div>
+                                        <div id="legend-area" class="col-md-12"></div>
                                     </div>
                                     <div class="clearfix"></div>
                                 </div>
