Organizing app to better display data

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -132,12 +132,13 @@
 
     <!-- JS stuff -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/chartjs/chart.min.js"></script>
     <script src="js/nicescroll/jquery.nicescroll.min.js"></script>
 
+    <script src="js/highcharts/highcharts-custom.js"></script>
+
     <script src="js/custom.js"></script>
-    <script src="js/custom.chart.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/app.experimentviewer.js"></script>
 </body>
 
 </html>
