Log key events in tetris

--- a/tetris/index.html
+++ b/tetris/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 	<title>Masonry - Game Dolphin</title>
 	<script src="../js/3rdparty/phaser.min.js"></script>
-	<script src="../card-flipper/SetupState.js"></script>
+	<script src="../card-flipper/SetupState.js?2"></script>
 	<script src="load.js"></script>
 	<script src="mainmenu.js?5"></script>
 	<script src="block.js"></script>
