Replace calm music with Erik Satie - Gymnopédie No.1

--- a/experiment/index.html
+++ b/experiment/index.html
@@ -18,6 +18,6 @@
 
 	<audio id="bip" src="./sfx/bip.mp3" volume="1.0">There is a problem with the bip sound in the experiment.</audio>
 	<audio id="tan" src="./sfx/tan.mp3" volume="1.0">There is a problem with the tan sound in the experiment.</audio>
-	<audio id="calm" src="./sfx/calm.ogg" volume="0.5" loop="true">There is a problem with the calm sound in the experiment.</audio>
+	<audio id="calm" src="./sfx/calm.mp3" volume="0.8" loop="true">There is a problem with the calm sound in the experiment.</audio>
 </body>
 </html>
