Foundation to create a "real-time" monitor for the experiment

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -83,7 +83,7 @@
 
             <!-- page content -->
             <div class="right_col" role="main">
-                <div class="">
+                <div class="" id="main-area">
 
                     <div class="page-title">
                         <div class="title_left">
@@ -98,12 +98,12 @@
                         <div class="col-md-12">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>Experiment game session</h2>
+                                    <h2>Welcome!</h2>
                                     <div class="clearfix"></div>
                                 </div>
                                 <div class="x_content">
                                     <div class="row">
-                                        <div class="col-md-12" style="padding: 10px;" id="data-area"></div>
+                                        <div class="col-md-12" style="padding: 10px;" id="data-area">Use the menu on the left to select data to visualize.</div>
                                     </div>
                                     <div class="row">
                                         <div id="legend-area" class="col-md-12"></div>
@@ -139,6 +139,7 @@
     <script src="js/custom.js"></script>
     <script src="js/app.js"></script>
     <script src="js/app.experimentviewer.js"></script>
+    <script src="js/app.monitor.js"></script>
 </body>
 
 </html>
