A few tweaks to the real time monitor.

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -137,6 +137,7 @@
     <script src="js/highcharts/highcharts-custom.js"></script>
 
     <script src="js/custom.js"></script>
+    <script src="../js/ftg.utils.js"></script>
     <script src="js/app.js"></script>
     <script src="js/app.experimentviewer.js"></script>
     <script src="js/app.monitor.js"></script>
