Information regarding stress and boredom.

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -56,14 +56,6 @@
                     <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
                     </div>
                     <!-- /sidebar menu -->
-
-                    <!-- /menu footer buttons -->
-                    <div class="sidebar-footer hidden-small">
-                        <a data-toggle="tooltip" data-placement="top" title="Settings">
-                            <span class="fa fa-cog" aria-hidden="true"></span>
-                        </a>
-                    </div>
-                    <!-- /menu footer buttons -->
                 </div>
             </div>
 
@@ -98,7 +90,7 @@
                         <div class="col-md-12">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>Welcome!</h2>
+                                    <h2 id="data-title">Welcome!</h2>
                                     <div class="clearfix"></div>
                                 </div>
                                 <div class="x_content">
