--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -91,6 +91,19 @@
                             <div class="x_panel">
                                 <div class="x_title">
                                     <h2 id="data-title">Welcome!</h2>
+                                    <div style="float: right;">
+                                        Grouping (in seconds):
+                                        <select id="grouping">
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="5">5</option>
+                                            <option value="10">10</option>
+                                            <option value="15">15</option>
+                                            <option value="20">20</option>
+                                            <option value="30">30</option>
+                                            <option value="60" selected="selected">60</option>
+                                        </select>
+                                    </div>
                                     <div class="clearfix"></div>
                                 </div>
                                 <div class="x_content">
