Tweak grouping thing.

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -101,7 +101,7 @@
                                             <option value="15">15</option>
                                             <option value="20">20</option>
                                             <option value="30">30</option>
-                                            <option value="60" selected="selected">60</option>
+                                            <option value="60">60</option>
                                         </select>
                                     </div>
                                     <div class="clearfix"></div>
